fix: display screen editor after add srn to tour (#703)
* fix: display screen editor after add srn to tour

* fix: screen editor loader at center

* fix: screen preview height condition

* style: text editor

* use width instead of max n min width

* style: box shadow n border radius

* style: scrollbar

* style: change ann panel open close icon

* fix: render condition

* Change direction of icon in annotation creator panel

---------

--- a/workspace/packages/client/src/component/annotation-rich-text-editor/styles.css
+++ b/workspace/packages/client/src/component/annotation-rich-text-editor/styles.css
@@ -152,7 +152,6 @@ pre::-webkit-scrollbar-thumb {
   border-top-right-radius: 2px;
   vertical-align: middle;
   box-shadow: 0px 1px 0px 0px #EDEDED;
-  overflow-x: scroll;
 }
 
 .toolbar button.toolbar-item {
